--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
                 <!--Slide Sobre-->
                 <div class="headline-sobre" data-aos="fade-up" data-aos-duration="1000">
                     <div class="headline-scroll" id="headline-scroll">
-                        <span class="bold">SOBRE</span>
+                        <span class="bold">SankTattoo</span>
                         <span class="divisor"></span>
-                        <span class="light">SOBRE</span>
+                        <span class="light">SankTattoo</span>
                         <span class="divisor"></span>
-                        <span class="bold">SOBRE</span>
+                        <span class="bold">SankTattoo</span>
                         <span class="divisor"></span>
-                        <span class="light">SOBRE</span>
+                        <span class="light">SankTattoo</span>
                         <span class="divisor"></span>
-                        <span class="bold">SOBRE</span>
+                        <span class="bold">SankTattoo</span>
                         <span class="divisor"></span>
-                        <span class="light">SOBRE</span>
+                        <span class="light">SankTattoo</span>
                         <span class="divisor"></span>
                     </div>
                 </div>
