--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do seu site</title>
+    <title>SankTattoo</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -37,7 +37,7 @@
         <!--Header-->
         <header class="header">
             <div class="logo">
-                <img src="assets/img/SUA-LOGO-AQUI.png" alt="">
+                <img src="assets/img/Logo.jpg" alt="SankTatooLOGO">
             </div>
             <div class="menu">
                 <label class="hamburger">
@@ -83,7 +83,7 @@
                     </button>
                 </div>
                 <div class="complemento-inicio">
-                    <img class="text" src="assets/img/complemento-esquerda.png" alt="">
+                    <img class="text" src="assets/img/Logo.jpg" alt="">
                     <img class="qr-code" src="assets/img/qr_code_rmdeveloper.png" alt="qr code para seu link bio">
                 </div>
             </div>
@@ -113,7 +113,7 @@
                 <div class="conteudo-sobre">
                     <div class="left-sobre" data-aos="fade-right" data-aos-duration="1000">
                         <div class="textos-sobre">
-                            <h1>Olá, me chamo Seu Nome</h1>
+                            <h1>Olá, me chamo Marcos Eduardo</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis quod quis nemo provident dignissimos.</p>
                         </div>
                         <div class="redes-sociais">
@@ -125,10 +125,10 @@
                     </div>
                     <div class="right-sobre" data-aos="fade-left" data-aos-duration="1000">
                         <div class="imagem-sobre">
-                            <img src="assets/img/sua-foto.png" alt="">
+                            <img src="assets/img/imagemprincipal.jpg" alt="">
                         </div>
                         <div class="complemento-sobre">
-                            <img src="assets/img/texto-giratorio.png" alt="">
+                            <img src="assets/img/" alt="">
                         </div>
                     </div>
                 </div>
@@ -263,9 +263,9 @@
                         <div class="imagens-case">
                             <div class="slide">
                                 <i class="bi bi-chevron-left prev"></i>
-                                <img src="assets/img/imagem.png" alt="">
-                                <img src="assets/img/imagem.png" alt="">
-                                <img src="assets/img/imagem.png" alt="">
+                                <img src="assets/img/imagemprincipal.jpg" alt="">
+                                <img src="assets/img/imagem2.jpg" alt="">
+                                <img src="assets/img/imagem3.jpg" alt="">
                                 <i class="bi bi-chevron-right next"></i>
                             </div>
                         </div>
