--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         </div>
                         <div class="redes-sociais">
                             <a href="#">INSTAGRAM<i class="bi bi-arrow-right"></i></a>
-                            <a href="#">GITHUB<i class="bi bi-arrow-right"></i></a>
+                            <a href="#">TIKTOK<i class="bi bi-arrow-right"></i></a>
                             <a href="#">FACEBOOK<i class="bi bi-arrow-right"></i></a>
                             <a href="#">LINKEDIN<i class="bi bi-arrow-right"></i></a>
                         </div>
@@ -392,7 +392,7 @@
                 <div class="footer-column social-column">
                     <ul class="social-links">
                         <li><a href="#"><i class="bi bi-instagram"></i> Instagram</a></li>
-                        <li><a href="#"><i class="bi bi-github"></i> GitHub</a></li>
+                        <li><a href="#"><i class="bi bi-tiktok"></i> TikTok</a></li>
                         <li><a href="#"><i class="bi bi-facebook"></i> Facebook</a></li>
                         <li><a href="#"><i class="bi bi-linkedin"></i> LinkedIn</a></li>
                     </ul>
@@ -400,7 +400,7 @@
             </div>
             <div class="footer-column credits-column">
                 <p>&copy; 2024 Todos os direitos reservados.</p>
-                <p>Desenvolvido por WS│Dev.</p>
+                <p>Desenvolvido por WCS│Dev.</p>
             </div>
         </footer>
         <!--Fim Footer-->
